fixed horizontal scrollbar

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow-x: hidden;
 }
 
 a {
